Prevent post text from overflowing

--- a/style/components/_comment.scss
+++ b/style/components/_comment.scss
@@ -30,6 +30,7 @@
 .comment__text {
   padding: 0 0 0 1.5em;
   margin: 0 0 1.5em;
+  overflow: auto;
 
   p {
     margin-top: 0.75em;
