--- a/style/components/_news-item.scss
+++ b/style/components/_news-item.scss
@@ -6,6 +6,8 @@
   padding: 0;
   margin: 1em 0 0;
 
+  overflow: auto;
+
   color: $gray;
   font-size: 0.8125rem;
 
